Add layout support, physical verification tools, and PEX flow
Major additions:
- Layout module (pade.layout) with LayoutCell, Shape, Port, Transform
- GDS and Magic layout writers
- Physical verification tools: DRC, LVS, PEX (examples/utils/)
- DesignRunner for unified DRC/LVS/PEX interface
- SKY130 MiM capacitor tutorial with full pre/post-layout flow
- pex_enabled decorator for PEX netlist switching
- CapRunner for simulation orchestration

Module consolidation:
- pade/statement/ -> pade/statement.py
- pade/stdlib/ -> pade/stdlib.py

Cleanup:
- Remove unused Terminal.index attribute
- Remove get_all_terminals(sort) parameter
- Remove section divider comments
- Remove duplicate imports and dead code

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,13 @@ cython_debug/
 sim_data/
 .hidden/
 pade/legacy/
+
+# Work directories (intermediate files from DRC/LVS/PEX)
+work/
+examples/work/
+examples/layout/
+examples/pex/
+examples/sim_data/
+
+# Cursor IDE
+.cursor/
