Update project version and enhance documentation for PADE
- Changed project version from 1.0.0-dev to 0.1.0 in pyproject.toml.
- Updated project description to "Programmatic Analog Design Environment".
- Expanded README.md with detailed features, quick start instructions, and project structure.
- Refined SKY130 configuration to include additional paths for digital synthesis and P&R.
- Improved layout and routing classes with enhanced error handling and multi-layer support.
- Added new tests for capacitor and transistor layouts, ensuring DRC and LVS compliance.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,17 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pade"
-version = "1.0.0-dev"
+version = "0.1.0"
 authors = [
   { name="Fredrik Feyling", email="fredrik.feyling@hotmail.com" },
 ]
-description = "Python based Analog Design Environment"
+description = "Programmatic Analog Design Environment"
 readme = "README.md"
 requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "License :: OSI Approved :: MIT License",
 ]
 dependencies = [
     'numpy',
